# git-remote-rclone

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.rst  git-remote-rclone  test.sh
src/: CMakeLists.txt  CMakePresets.json  debug.hpp  githlpr.cpp  githlpr.hpp  main.cpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  doctestutils.hpp  test_githlpr.cpp  test_utils.cpp  testutils.hpp
tests/: CMakeLists.txt  CMakePresets.json  doctestutils.hpp  test_githlpr.cpp  test_integration.cpp  testutils.hpp
tools/: CMakeLists.txt  CMakePresets.json  README.rst  git-remote-interactive-proto-attach.cpp  git-remote-interactive-proto-runner.cpp  git-remote-interactive-proto.cpp  toolsutils.hpp
