add_executable(test_integration test_integration.cpp)
target_include_directories(test_integration PRIVATE ./include)
target_link_libraries(test_integration PRIVATE doctest::doctest)
add_dependencies(test_integration git-remote-rclone)
add_test(NAME test_integration COMMAND $<TARGET_FILE:test_integration>)
set_tests_properties(test_integration PROPERTIES ENVIRONMENT BINARY_SEARCH_PATH=$<TARGET_FILE_DIR:git-remote-rclone>)

add_executable(test_githlpr test_githlpr.cpp)
target_include_directories(test_githlpr PRIVATE ./include)
target_link_libraries(test_githlpr PRIVATE doctest::doctest githlpr)
add_test(NAME test_githlpr COMMAND $<TARGET_FILE:test_githlpr>)

#add_executable(test_utils test_utils.cpp)
#target_include_directories(test_utils PRIVATE ./include)
#target_link_libraries(test_utils PRIVATE doctest::doctest utils)
#add_test(NAME test_utils COMMAND $<TARGET_FILE:test_utils>)
